--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
           <p>Laura Lechner</p>
         </div>
         <div class="social">
-          <a href="mailto:laura@lauralechner.com"><i class="fa fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/lalechner"><i class="fa fa-linkedin-square"></i></a>
-          <a href="https://vimeo.com/lauralechner"><i class="fa fa-vimeo-square"></i></a>
-          <a href="https://www.facebook.com/kimthefilm/?fref=ts"><i class="fa fa-facebook-square"></i></a>
+            <a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i></a>
+            <a href="{{ site.linkedin_url }}"><i class="fa fa-linkedin-square"></i></a>
+            <a href="{{ site.vimeo_url }}"><i class="fa fa-vimeo-square"></i></a>
+            <a href="{{ site.facebook_url }}"><i class="fa fa-facebook-square"></i></a>
         </div>
       </div>
     </footer>
@@ -26,5 +26,5 @@ ga('send', 'pageview');
   <!-- JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="{{ "/js/scripts.js" | relative_url }}"></script>
 </html>
