--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Laura Lechner | Filmmaker</title>
+      <title>{{ site.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Laura Lechner is a filmmaker based in New York City">
+    <meta name="description" content="{{ site.description }}">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="{{ "/css/styles.css" | relative_url }}">
     <!-- font -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="./images/signature1.png" />
+    <link rel="icon" type="image/png" href="{{ "/images/signature1.png" | relative_url }}" />
   </head>
   <body>
