--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,14 +2,14 @@
       <div class="container">
         <div class="menu">
           <ul>
-            <li><a href="about.html">About</a></li>
+            <li><a href="{{ "/about/" | relative_url }}">About</a></li>
 
-            <li><a href="work.html">Work</a></li>
+            <li><a href="{{ "/work/" | relative_url }}">Work</a></li>
 
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="{{ "/contact/" | relative_url }}">Contact</a></li>
         </div> <!-- end of menu -->
         <div class="name">
-          <h1><a href="./">Laura Lechner</a></h1>
+            <h1><a href="{{ "/" | relative_url }}">Laura Lechner</a></h1>
         </div>
       </div>
     </nav>
