--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,18 @@
 {% include nav.html %}
 <main class="home-page">
   <div class="container">
-    <h2>list out projects here</h2>
+    {% assign items = (site.project | sort: 'weight') %}
+    {% for item in items %}
+    <div class="front-page-tile">
+        {% if item.permalink %}
+        <a href="{{ item.permalink | relative_url }}"><img src="/images/{{ item.homepage-image }}" alt=""></a>
+        {% elsif item.homepage-link %}
+        <a href="{{ item.homepage-link }}"><img src="/images/{{ item.homepage-image }}" alt=""></a>
+        {% else %}
+        <img src="/images/{{ item.homepage-image }}" alt="">
+        {% endif %}
+    </div>
+    {% endfor %}
   </div>
 </main>
 {% include footer.html %}
