--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
       <div class="container">
         <div class="menu">
           <ul>
-            <li><a href="{{ "/about/" | relative_url }}">About</a></li>
+            <li><a href="{{ site.url }}/about/">About</a></li>
 
             <li><a href="{{ "/work/" | relative_url }}">Work</a></li>
 
