Update all relative urls to site.url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,5 +26,5 @@ ga('send', 'pageview');
   <!-- JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
-  <script src="{{ "/js/scripts.js" | relative_url }}"></script>
+  <script src="{{ site.url }}/js/scripts.js"></script>
 </html>
