--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ "/css/styles.css" | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/styles.css">
     <!-- font -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="{{ "/images/signature1.png" | relative_url }}" />
+    <link rel="icon" type="image/png" href="{{ site.url }}/images/signature1.png" />
   </head>
   <body>
