--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,12 +4,12 @@
           <ul>
             <li><a href="{{ site.url }}/about/">About</a></li>
 
-            <li><a href="{{ "/work/" | relative_url }}">Work</a></li>
+            <li><a href="{{ site.url }}/work/">Work</a></li>
 
-            <li><a href="{{ "/contact/" | relative_url }}">Contact</a></li>
+            <li><a href="{{ site.url }}/contact/">Contact</a></li>
         </div> <!-- end of menu -->
         <div class="name">
-            <h1><a href="{{ "/" | relative_url }}">Laura Lechner</a></h1>
+            <h1><a href="{{ site.url }}">Laura Lechner</a></h1>
         </div>
       </div>
     </nav>
