--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,15 +2,15 @@
 {% include nav.html %}
 <main class="home-page">
   <div class="container">
-    {% assign items = (site.project | sort: 'weight') %}
+    {% assign items = site.project | sort: 'weight' %}
     {% for item in items %}
     <div class="front-page-tile">
         {% if item.permalink %}
-        <a href="{{ item.permalink | relative_url }}"><img src="/images/{{ item.homepage-image }}" alt=""></a>
+        <a href="{{ site.url }}{{ item.permalink }}"><img src="{{ site.url }}/images/{{ item.homepage-image }}" alt=""></a>
         {% elsif item.homepage-link %}
-        <a href="{{ item.homepage-link }}"><img src="/images/{{ item.homepage-image }}" alt=""></a>
+        <a href="{{ item.homepage-link }}"><img src="{{ site.url }}/images/{{ item.homepage-image }}" alt=""></a>
         {% else %}
-        <img src="/images/{{ item.homepage-image }}" alt="">
+        <img src="{{ site.url }}/images/{{ item.homepage-image }}" alt="">
         {% endif %}
     </div>
     {% endfor %}
