--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 {% include nav.html %}
 <main class="home-page">
   <div class="container">
-    {% assign items = site.project | sort: 'weight' %}
+    {% assign items = site.project | sort: 'homepage-weight' %}
     {% for item in items %}
     <div class="front-page-tile">
         {% if item.permalink %}
