--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -2,37 +2,23 @@
 {% include nav.html %}
 <main class="work-page">
     <div class="container">
-        {% assign items = site.project | sort: 'weight' %}
+        {% assign items = site.project | sort: 'workpage-weight' %}
         {% for item in items %}
+        {% if item.workpage %}
         <div class="work-container">
             <div class="video-container">
-                <iframe src="https://player.vimeo.com/video/80760789" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe src="{{ item.vimeo-url }}" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
             <div class="video-info">
                 <div class="video-title">
-                    <h2>Directing Reel</h2>
+                    <h2>{{ item.video-title }}</h2>
                 </div>
                 <div class="video-caption">
-                    Featuring clips from: <br>
-                    THUNDERBIRD EP. 4 - SAINT FORTUNATUS <br>
-                    CHERRY APPLE <br>
-                    SHORES <br>
-                    KIND OF BLUE <br>
-                    Music by <a href="http://danielbonespur.bandcamp.com/">Daniel Bonespur</a>
+                    {{ item.video-caption }}
                 </div>
             </div>
         </div><!-- end of .work-container -->
-
-
-    <div class="front-page-tile">
-        {% if item.permalink %}
-        <a href="{{ site.url }}{{ item.permalink }}"><img src="{{ site.url }}/images/{{ item.homepage-image }}" alt=""></a>
-        {% elsif item.homepage-link %}
-        <a href="{{ item.homepage-link }}"><img src="{{ site.url }}/images/{{ item.homepage-image }}" alt=""></a>
-        {% else %}
-        <img src="{{ site.url }}/images/{{ item.homepage-image }}" alt="">
         {% endif %}
-    </div>
     {% endfor %}
   </div>
 </main>
