Template out videos on default template
- Updates 'vimeo-url' to 'vimeo-id'
- Conditionally shows video on default page template if 'publish-video'
is true

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -7,7 +7,7 @@
         {% if item.workpage %}
         <div class="work-container">
             <div class="video-container">
-                <iframe src="{{ item.vimeo-url }}" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/{{ item.vimeo-id }}" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
             <div class="video-info">
                 <div class="video-title">
