--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,10 +6,12 @@
 
             <li><a href="{{ site.url }}/work/">Work</a></li>
 
+            <li><a href="{{ site.url }}/blog/">Blog</a></li>
+
             <li><a href="{{ site.url }}/contact/">Contact</a></li>
         </div> <!-- end of menu -->
         <div class="name">
-            <h1><a href="{{ site.url }}">Laura Lechner</a></h1>
+            <span class="site-title"><a href="{{ site.url }}">Laura Lechner</a></span>
         </div>
       </div>
     </nav>
