--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -287,6 +287,7 @@ main.blog-list-page {
 .blog-list-item {
     display: flex;
     flex-flow: column nowrap;
+    margin-bottom: 2em;
     
     > .blog-list-info {
         margin-bottom: 1.5em;
