--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -1,6 +1,9 @@
 {% include head.html %}
 {% include nav.html %}
 <main class="work-page">
+  <div class="page-title">
+      <h1>Work</h1>
+  </div>
     <div class="container">
         {% assign items = site.project | sort: 'workpage-weight' %}
         {% for item in items %}
