--- a/_layouts/blog-list.html
+++ b/_layouts/blog-list.html
@@ -1,7 +1,7 @@
 {% include head.html %}
 {% include nav.html %}
 <main class="blog-list-page">
-  <div class="container page-title">
+  <div class="page-title">
       <h1>Blog</h1>
   </div>
   <div class="container blog-list-container">
