--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,6 +1,9 @@
 {% include head.html %}
 {% include nav.html %}
 <main class="contact-page">
+  <div class="container page-title">
+      <h1>Contact</h1>
+  </div>
   <div class="container">
       {{ content }}
   </div>
