--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 {% include head.html %}
 {% include nav.html %}
 <main class="basic-page">
-  <div class="container page-title">
+  <div class="page-title">
       <h1>{{ page.title }}</h1>
   </div>
   <div class="container">
