--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,7 +1,7 @@
 {% include head.html %}
 {% include nav.html %}
-<main class="basic-page">
-  <div class="container page-title">
+<main class="project-page">
+  <div class="page-title">
       <h1>{{ page.title }}</h1>
   </div>
   <div class="container">
@@ -25,7 +25,7 @@
   {% for item in site.blog %}
   {% if page.project-tag == item.project-tag %}
   <div class="container related-blog-title">
-      <h1>Related Blog Posts</h1>
+      <h2>Related Blog Posts</h2>
   </div>
   {% break %}
   {% endif %}
