--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,6 @@ ga('send', 'pageview');
   </script>
   <!-- JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
   <script src="{{ site.url }}/js/scripts.js"></script>
 </html>
