Correctly italicize em, i tags; add one line space after p tags

--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -76,7 +76,7 @@ footer .credit {
   font-weight: 400;
 }
 
-.ital {
+.ital, em, i {
   font-style: italic;
 }
 
@@ -92,4 +92,8 @@ footer .credit {
 .blog-title-container > h1 {
     font-style: italic;
     font-weight: unset;
+}
+
+p {
+    margin-bottom: 1em;
 }
