Add blog image caption.

--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -89,6 +89,11 @@ footer .credit {
   margin-bottom: 1em;
 }
 
+.blog-image-caption {
+   font-style: italic; 
+   color: black;
+}
+
 .blog-title-container > h1 {
     font-style: italic;
     font-weight: unset;
