--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -3,7 +3,10 @@
 <main class="blog-post-page">
   <div class="container blog-title-container">
       <h1>{{ page.title }}</h1>
-      <img src="/images/{{ page.blog-image }}" alt=""/>
+      <div id="blog-image-container" class="name">
+          <img src="/images/{{ page.blog-image }}" alt=""/>
+          <span class="blog-image-caption">{{ page.blog-image-caption }}</span>
+      </div>
       <span class="dateline">{{ page.date | date: "%A, %B %-d, %Y" }}</span>
   </div>
   <div class="container blog-container">
